-Prioritise cards forgotten during the review over cards which have not yet 
 been committed to long-term memory.
-Improved scheduling of overdue cards, by placing those with a shorter 
 interval first. Being a day late on an interval of 2 could be much worse 
 than being a day late on an interval of 50.
-Fix some keyboard shortcut quirks (reported by Stephen Boulet and varkhan1).
-Hebrew translation by Michal T.
-Updated Japanese translation by Patrick Kenny.
	

	
MNEMOSYNE 1.0.2 : 2008-07-10

-Added import/export support for CueCard wcu files (Chris Aakre).
-Added features to improve display of map cards from svgtoquiz (Timothy 
 Bourke).
-Added support for Mac installer through py2app (Konrad Wojas).
-On OSX, Mnemosyne now stores its data in Library/Mnemosyne (Konrad Wojas).
-Added <protect>...</protect> tags. Text within these tags will not be
 touched by 'increase size of non-latin characters' (Konrad Wojas).
-Changed compression format of the backups from bz2 to gz. This results in
 less compression, but a much faster program exit (suggested by Konrad Wojas).
-Added midi files to "import sound" file dialog (suggested by Johan Forsberg).
-Polish translation by Tomasz Nazarenko.
-Japanese translation by Patrick Kenny.	
-Persian translation by Bahman Eslami.
-Brazilian Portugese translation by Fabio Kreusch.
-Make dvipng invocation more robust. Especially helpful for Ubuntu users.
 (Thanks to Stephen Boulet and franny1).
-Fixed bug where day_starts_at was not working (Konrad Wojas).
-Fixed bug where relative paths wouldn't work with non-standard directory
 locations (reported by reynard and stvltvs).
-Fixed bug with non-latin filenames and increase size of non-latin characters
 (Nils Barth).
-Make import of Supermemo for Palm databases more robust (Felix Engel).
-Make XML import from svgtoquiz more robust (bug reported by Mercado1).

	
	
MNEMOSYNE 1.0.1.1 : 2008-03-22
	
-Disabled making grade 0 the keyboard default for cards with previous