@@ -111,6 +111,8 @@ Mnemosyne 2.0: Major rewrite
 
 -make <a> links clickable / animated GIFs
 
+-update old plugins
+
 
 
 Mnemosyne 2.x
