@@ -5,9 +5,9 @@
 ##############################################################################
 
 from xml.sax import saxutils, make_parser
-from xml.sax.handler import feature_namespaces
+from xml.sax.handler import feature_namespaces, ContentHandler
 
-class Mnemosyne_XML_Importer(saxutils.DefaultHandler):
+class Mnemosyne_XML_Importer(ContentHandler):
     
     def __init__(self, default_cat=None, reset_learning_data=False):
         self.reading, self.text = {}, {}
